--- a/meets_pages/37th_Early_Bird_Open_Mens_5000_Meters_HS_Open_5K_24.html
+++ b/meets_pages/37th_Early_Bird_Open_Mens_5000_Meters_HS_Open_5K_24.html
@@ -312,7 +312,7 @@
                 <td><a href="https://www.athletic.net/athlete/21615273/cross-country">Nicholas Yuan</a></td>
                 <td><a href="https://www.athletic.net/athlete/21615273/cross-country">Ann Arbor Skyline</a></td>
                 <td>17:44.40</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Nicholas Yuan available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21615273.jpg" alt="Nicholas Yuan" width="50"></td>
             </tr> <tr>
                 <td>29</td>
                 <td>9</td>
@@ -445,7 +445,7 @@
                 <td><a href="https://www.athletic.net/athlete/18820279/cross-country">Jack Robichaud</a></td>
                 <td><a href="https://www.athletic.net/athlete/18820279/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:23.70</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Jack Robichaud available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/18820279.jpg" alt="Jack Robichaud" width="50"></td>
             </tr> <tr>
                 <td>48</td>
                 <td>12</td>
@@ -466,7 +466,7 @@
                 <td><a href="https://www.athletic.net/athlete/21147171/cross-country">Gustaf Finn</a></td>
                 <td><a href="https://www.athletic.net/athlete/21147171/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:28.20</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Gustaf Finn available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21147171.jpg" alt="Gustaf Finn" width="50"></td>
             </tr> <tr>
                 <td>51</td>
                 <td>9</td>
@@ -550,7 +550,7 @@
                 <td><a href="https://www.athletic.net/athlete/19203161/cross-country">Martin Gehrke</a></td>
                 <td><a href="https://www.athletic.net/athlete/19203161/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:42.70</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Martin Gehrke available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/19203161.jpg" alt="Martin Gehrke" width="50"></td>
             </tr> <tr>
                 <td>63</td>
                 <td>12</td>
@@ -634,7 +634,7 @@
                 <td><a href="https://www.athletic.net/athlete/21245954/cross-country">Kyle Krasan</a></td>
                 <td><a href="https://www.athletic.net/athlete/21245954/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:59.90</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Kyle Krasan available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21245954.jpg" alt="Kyle Krasan" width="50"></td>
             </tr> <tr>
                 <td>75</td>
                 <td>12</td>
@@ -655,7 +655,7 @@
                 <td><a href="https://www.athletic.net/athlete/18820257/cross-country">Parker Razelun</a></td>
                 <td><a href="https://www.athletic.net/athlete/18820257/cross-country">Ann Arbor Skyline</a></td>
                 <td>19:01.80</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Parker Razelun available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/18820257.jpg" alt="Parker Razelun" width="50"></td>
             </tr> <tr>
                 <td>78</td>
                 <td>11</td>
@@ -718,7 +718,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349680/cross-country">Dylan Hanley</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349680/cross-country">Ann Arbor Skyline</a></td>
                 <td>19:15.60</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Dylan Hanley available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349680.jpg" alt="Dylan Hanley" width="50"></td>
             </tr> <tr>
                 <td>87</td>
                 <td>10</td>
@@ -732,7 +732,7 @@
                 <td><a href="https://www.athletic.net/athlete/21147176/cross-country">Bruno Cifaldi</a></td>
                 <td><a href="https://www.athletic.net/athlete/21147176/cross-country">Ann Arbor Skyline</a></td>
                 <td>19:17.30</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Bruno Cifaldi available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21147176.jpg" alt="Bruno Cifaldi" width="50"></td>
             </tr> <tr>
                 <td>89</td>
                 <td>9</td>
@@ -872,7 +872,7 @@
                 <td><a href="https://www.athletic.net/athlete/23564880/cross-country">Juan Luis Llanes</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564880/cross-country">Ann Arbor Skyline</a></td>
                 <td>19:48.00</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Juan Luis Llanes available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564880.jpg" alt="Juan Luis Llanes" width="50"></td>
             </tr> <tr>
                 <td>110</td>
                 <td>10</td>
@@ -1236,7 +1236,7 @@
                 <td><a href="https://www.athletic.net/athlete/21615274/cross-country">Garrett Comer</a></td>
                 <td><a href="https://www.athletic.net/athlete/21615274/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:04.20</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Garrett Comer available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21615274.jpg" alt="Garrett Comer" width="50"></td>
             </tr> <tr>
                 <td>162</td>
                 <td>10</td>
