--- a/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_Boys_24.html
+++ b/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_Boys_24.html
@@ -441,7 +441,7 @@
                 <td><a href="https://www.athletic.net/athlete/21615273/cross-country">Nicholas Yuan</a></td>
                 <td><a href="https://www.athletic.net/athlete/21615273/cross-country">Ann Arbor Skyline</a></td>
                 <td>17:31.6</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Nicholas Yuan available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21615273.jpg" alt="Nicholas Yuan" width="50"></td>
             </tr> <tr>
                 <td>44</td>
                 <td>12</td>
@@ -567,7 +567,7 @@
                 <td><a href="https://www.athletic.net/athlete/18820279/cross-country">Jack Robichaud</a></td>
                 <td><a href="https://www.athletic.net/athlete/18820279/cross-country">Ann Arbor Skyline</a></td>
                 <td>17:43.1</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Jack Robichaud available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/18820279.jpg" alt="Jack Robichaud" width="50"></td>
             </tr> <tr>
                 <td>62</td>
                 <td>10</td>
@@ -630,7 +630,7 @@
                 <td><a href="https://www.athletic.net/athlete/21147176/cross-country">Bruno Cifaldi</a></td>
                 <td><a href="https://www.athletic.net/athlete/21147176/cross-country">Ann Arbor Skyline</a></td>
                 <td>17:57.2</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Bruno Cifaldi available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21147176.jpg" alt="Bruno Cifaldi" width="50"></td>
             </tr> <tr>
                 <td>71</td>
                 <td>11</td>
@@ -644,7 +644,7 @@
                 <td><a href="https://www.athletic.net/athlete/21245954/cross-country">Kyle Krasan</a></td>
                 <td><a href="https://www.athletic.net/athlete/21245954/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:01.8</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Kyle Krasan available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21245954.jpg" alt="Kyle Krasan" width="50"></td>
             </tr> <tr>
                 <td>73</td>
                 <td>12</td>
@@ -924,7 +924,7 @@
                 <td><a href="https://www.athletic.net/athlete/21147171/cross-country">Gustaf Finn</a></td>
                 <td><a href="https://www.athletic.net/athlete/21147171/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:42.0</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Gustaf Finn available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/21147171.jpg" alt="Gustaf Finn" width="50"></td>
             </tr> <tr>
                 <td>113</td>
                 <td>12</td>
