--- a/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_JV_Boys_24.html
+++ b/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Mens_5000_Meters_D1_JV_Boys_24.html
@@ -173,7 +173,7 @@
                 <td><a href="https://www.athletic.net/athlete/19203161/cross-country">Martin Gehrke</a></td>
                 <td><a href="https://www.athletic.net/athlete/19203161/cross-country">Ann Arbor Skyline</a></td>
                 <td>17:58.8</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Martin Gehrke available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/19203161.jpg" alt="Martin Gehrke" width="50"></td>
             </tr> <tr>
                 <td>8</td>
                 <td>11</td>
@@ -215,7 +215,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349680/cross-country">Dylan Hanley</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349680/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:13.9</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Dylan Hanley available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349680.jpg" alt="Dylan Hanley" width="50"></td>
             </tr> <tr>
                 <td>14</td>
                 <td>10</td>
@@ -229,7 +229,7 @@
                 <td><a href="https://www.athletic.net/athlete/18820257/cross-country">Parker Razelun</a></td>
                 <td><a href="https://www.athletic.net/athlete/18820257/cross-country">Ann Arbor Skyline</a></td>
                 <td>18:21.8</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Parker Razelun available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/18820257.jpg" alt="Parker Razelun" width="50"></td>
             </tr> <tr>
                 <td>16</td>
                 <td>11</td>
