--- a/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_Girls_24.html
+++ b/meets_pages/56th_Holly-Duane_Raffin_Festival_of_Races_Womens_5000_Meters_D1_Girls_24.html
@@ -197,7 +197,7 @@
                 <td><a href="https://www.athletic.net/athlete/23564884/cross-country">Irie Scrase</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564884/cross-country">Ann Arbor Skyline</a></td>
                 <td>19:48.9</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Irie Scrase available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564884.jpg" alt="Irie Scrase" width="50"></td>
             </tr> <tr>
                 <td>12</td>
                 <td>11</td>
@@ -407,7 +407,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349671/cross-country">Lila Edison</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349671/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:47.4</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Lila Edison available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349671.jpg" alt="Lila Edison" width="50"></td>
             </tr> <tr>
                 <td>42</td>
                 <td>12</td>
@@ -435,7 +435,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349719/cross-country">Isla Tharp</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349719/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:52.3</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Isla Tharp available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349719.jpg" alt="Isla Tharp" width="50"></td>
             </tr> <tr>
                 <td>46</td>
                 <td>12</td>
@@ -505,14 +505,14 @@
                 <td><a href="https://www.athletic.net/athlete/23564882/cross-country">Alison Kauffman</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564882/cross-country">Ann Arbor Skyline</a></td>
                 <td>22:09.9</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Alison Kauffman available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564882.jpg" alt="Alison Kauffman" width="50"></td>
             </tr> <tr>
                 <td>56</td>
                 <td>10</td>
                 <td><a href="https://www.athletic.net/athlete/23687883/cross-country">Mara Mocanu</a></td>
                 <td><a href="https://www.athletic.net/athlete/23687883/cross-country">Ann Arbor Skyline</a></td>
                 <td>22:13.0</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Mara Mocanu available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23687883.jpg" alt="Mara Mocanu" width="50"></td>
             </tr> <tr>
                 <td>57</td>
                 <td>9</td>
@@ -750,7 +750,7 @@
                 <td><a href="https://www.athletic.net/athlete/19352189/cross-country">Ayla Balazer</a></td>
                 <td><a href="https://www.athletic.net/athlete/19352189/cross-country">Ann Arbor Skyline</a></td>
                 <td>24:18.8</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Ayla Balazer available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/19352189.jpg" alt="Ayla Balazer" width="50"></td>
             </tr> <tr>
                 <td>91</td>
                 <td>12</td>
