--- a/meets_pages/37th_Early_Bird_Open_Womens_5000_Meters_HS_Open_5K_24.html
+++ b/meets_pages/37th_Early_Bird_Open_Womens_5000_Meters_HS_Open_5K_24.html
@@ -184,7 +184,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349671/cross-country">Lila Edison</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349671/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:03.40</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Lila Edison available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349671.jpg" alt="Lila Edison" width="50"></td>
             </tr> <tr>
                 <td>13</td>
                 <td>11</td>
@@ -205,7 +205,7 @@
                 <td><a href="https://www.athletic.net/athlete/23564884/cross-country">Irie Scrase</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564884/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:16.50</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Irie Scrase available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564884.jpg" alt="Irie Scrase" width="50"></td>
             </tr> <tr>
                 <td>16</td>
                 <td>10</td>
@@ -226,7 +226,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349719/cross-country">Isla Tharp</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349719/cross-country">Ann Arbor Skyline</a></td>
                 <td>21:22.30</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Isla Tharp available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349719.jpg" alt="Isla Tharp" width="50"></td>
             </tr> <tr>
                 <td>19</td>
                 <td>12</td>
@@ -373,14 +373,14 @@
                 <td><a href="https://www.athletic.net/athlete/19352189/cross-country">Ayla Balazer</a></td>
                 <td><a href="https://www.athletic.net/athlete/19352189/cross-country">Ann Arbor Skyline</a></td>
                 <td>23:10.20</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Ayla Balazer available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/19352189.jpg" alt="Ayla Balazer" width="50"></td>
             </tr> <tr>
                 <td>40</td>
                 <td>10</td>
                 <td><a href="https://www.athletic.net/athlete/23687883/cross-country">Mara Mocanu</a></td>
                 <td><a href="https://www.athletic.net/athlete/23687883/cross-country">Ann Arbor Skyline</a></td>
                 <td>23:13.90</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Mara Mocanu available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23687883.jpg" alt="Mara Mocanu" width="50"></td>
             </tr> <tr>
                 <td>41</td>
                 <td>9</td>
@@ -401,7 +401,7 @@
                 <td><a href="https://www.athletic.net/athlete/23564882/cross-country">Alison Kauffman</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564882/cross-country">Ann Arbor Skyline</a></td>
                 <td>23:20.00</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Alison Kauffman available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564882.jpg" alt="Alison Kauffman" width="50"></td>
             </tr> <tr>
                 <td>44</td>
                 <td>12</td>
@@ -429,7 +429,7 @@
                 <td><a href="https://www.athletic.net/athlete/22520342/cross-country">Tia Cocciolone</a></td>
                 <td><a href="https://www.athletic.net/athlete/22520342/cross-country">Ann Arbor Skyline</a></td>
                 <td>23:42.10</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Tia Cocciolone available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/22520342.jpg" alt="Tia Cocciolone" width="50"></td>
             </tr> <tr>
                 <td>48</td>
                 <td>11</td>
@@ -485,7 +485,7 @@
                 <td><a href="https://www.athletic.net/athlete/23349718/cross-country">Elin Tenbrink</a></td>
                 <td><a href="https://www.athletic.net/athlete/23349718/cross-country">Ann Arbor Skyline</a></td>
                 <td>24:13.00</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Elin Tenbrink available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23349718.jpg" alt="Elin Tenbrink" width="50"></td>
             </tr> <tr>
                 <td>56</td>
                 <td>12</td>
@@ -702,7 +702,7 @@
                 <td><a href="https://www.athletic.net/athlete/18895017/cross-country">Vera Naines</a></td>
                 <td><a href="https://www.athletic.net/athlete/18895017/cross-country">Ann Arbor Skyline</a></td>
                 <td>26:05.90</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Vera Naines available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/18895017.jpg" alt="Vera Naines" width="50"></td>
             </tr> <tr>
                 <td>87</td>
                 <td>12</td>
@@ -1199,7 +1199,7 @@
                 <td><a href="https://www.athletic.net/athlete/23564883/cross-country">Arabella Kessler</a></td>
                 <td><a href="https://www.athletic.net/athlete/23564883/cross-country">Ann Arbor Skyline</a></td>
                 <td>32:58.60</td>
-                <td><img src="../client_data_files/public_domain_question_mark.jpg" alt="No picture of Arabella Kessler available" width="50"></td>
+                <td><img src="../client_data_files/images/AthleteImages/23564883.jpg" alt="Arabella Kessler" width="50"></td>
             </tr> <tr>
                 <td>158</td>
                 <td>12</td>
